# rakuten-project

./:    .dockerignore  .env.dev  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  Makefile.old  README.md  THIRD-PARTY-NOTICES.md  backmapping.py  bentofile.yaml  best_text_model.pt.dvc  blablublub.md  data.dvc  dev_notes.md  doc.md  docker-compose.airflow-production.yaml  docker-compose.airflow-production.yml  docker-compose.airflow.yaml  docker-compose.airflow.yml  docker-compose.base.yaml  docker-compose.dev.yaml  docker-compose.infrastructure.yaml  docker-compose.ml-services.yaml  docker-compose.prod.yaml  docker-compose.production.yaml  docker-compose.production.yml  docker-compose.ui.yaml  docker-compose.yaml  docker-compose.yml  dvc.yaml  notizen_fuer_diesen_branch.md  params.yaml  pyproject.toml  requirements.txt  requirements_image.txt  setup.sh
.dvc/: config
.github/workflows/: integration.yml
artifacts/splits/: test_ids.csv  train_ids.csv  val_ids.csv
configs/: image_best_train_config.yaml  image_evaluate_config.yaml  image_inference_config.yaml  image_parameter_search_space.yaml  image_preprocessing_config.yaml  image_train_config.yaml  label_encoder.json  label_encoding.json  text_best_train_config.yaml  text_evaluate_config.yaml  text_finetune_config.yaml  text_parameter_search_space.yaml  text_preprocessing_config.yaml  text_train_config.yaml
dags/: finetune_new_data.py  infere_new_data.py  manual_train_text_dag.py  retrain_new_data.py  simulate_new_data.py
data/: .gitignore  raw.dvc
docker/: Dockerfile.api  Dockerfile.evaluate-text  Dockerfile.evidently  Dockerfile.inference  Dockerfile.streamlit  Dockerfile.train  Dockerfile.train-image  Dockerfile.train-text  entrypoint.sh  entrypoint_finetune.sh  requirements_image.txt
monitoring/: evidently_service.py  prometheus.yaml
monitoring/grafana/provisioning/dashboards/: bentoml.json  dashboard.yaml  rakuten-drift.json  rakuten-ml-service.json
nginx/: .htpasswd  nginx.conf
results/: dvc_metrics.json  dvc_metrics_finetune.json  inference_results.json  mlflow_run_id.txt  mlflow_run_id_finetune.txt  text_inference_results.json
src/data/: image_dataset.py  image_preprocessing.py  label_encoding.py  text_dataset.py  text_preprocessing.py
src/evaluation/: image_evaluate.py  run_image_evaluation.py  run_text_evaluation.py  text_evaluate.py
src/inference/: run_image_inference.py  run_text_inference.py  text_random_search_hyperparameters.py
src/models/: image_classifier.py  text_classifier.py
src/pipeline/: finetune_pipeline.py  image_pipeline.py  preprocess_text_pipeline.py  text_pipeline.py
src/serving/: api.py  bento_service.py  mlflow_bento.py  prepare_bento_assets.py  promote_mlflow_model.py  register_model.py  schemas.py  sync_mlflow_to_bento.py
src/training/: image_random_search_hyperparameters.py  mlflow_text_pyfunc.py  mlflow_text_registry.py  run_image_training.py  run_text_finetuning.py  run_text_training.py  text_random_search_hyperparameters.py  train_image.py  train_text.py
src/utils/: mlflow_registry.py
streamlit/: .dockerignore  .gitignore  Dockerfile  api_client.py  app.py  auth.py  category_names.py  config.yaml  docker-compose.yml  requirements.txt  settings_manager.py
streamlit/data/: batch_test_20.csv  category_names.json
streamlit/pages/: admin_settings.py  admin_tests.py  batch_prediction.py  single_prediction.py
streamlit/views/: admin_settings.py  admin_tests.py  batch_prediction.py  corrections.py  monitoring.py  single_prediction.py
tests/: conftest.py  test_api.py  test_bento_auth.py  test_bento_http.py  test_bento_packaging.py  test_mlflow_registry_flow.py  test_run_text_training.py  test_text_dataset.py  test_text_pipeline.py  test_text_preprocessing.py
