[project]
name = "rakuten-multimodal-classifier"
version = "0.1.0"
description = "Unified Image and Text Classification Pipeline for Rakuten Data"
readme = "README.md"
requires-python = ">=3.11,<3.13"

# Absolute minimum base – shared utilities, config, data handling
dependencies = [
  "numpy>=2.0.0,<3.0.0",
  "pandas>=2.2.0,<4.0.0",
  "pyyaml==6.0.3",
  "python-dateutil==2.9.0.post0",
  "typing-extensions>=4.10.0",
  "tzdata>=2025.0",
  "PyJWT>=2.10.1",
  "huggingface-hub>=0.23.0",
  "mlflow>=3.11.1",
]

[project.optional-dependencies]

# Text training + inference
text = [
  "accelerate>=0.23.0",
  "scikit-learn>=1.5.2",
  "torch>=2.5.1",
  "transformers>=5.3.0",
]

# API / serving
api = [
  "bentoml>=1.4.0,<2.0.0",
  "pillow==10.4.0",
  "torch>=2.5.1",
  "transformers>=5.3.0",
]

# Data versioning + experiment tracking (was lost in V2 during the merge)
data = [
  "dvc[s3]>=3.0.0",
  "dagshub>=0.3.0",
]

# Convenience meta-extras
training-text = ["rakuten-multimodal-classifier[text,data]"]
all = ["rakuten-multimodal-classifier[text,api,data]"]

# -----------------------------------------------------------------------------
[dependency-groups]
dev = [
  "ipykernel>=6.25.0",
  "matplotlib>=3.8.0",
  "pre-commit>=4.5.1",
  "pytest>=7.4.0",
]

# -----------------------------------------------------------------------------
# uv: Platform-specific PyTorch wheels via alternate indexes
#
# - macOS:         CPU wheels
# - Linux/Windows: CUDA 12.1 wheels
# -----------------------------------------------------------------------------

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu121", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
  { index = "pytorch-cu121", marker = "sys_platform == 'win32'" },
  { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
  { index = "pytorch-cpu", marker = "sys_platform == 'linux' and platform_machine == 'aarch64'" },
]

torchvision = [
  { index = "pytorch-cu121", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
  { index = "pytorch-cu121", marker = "sys_platform == 'win32'" },
  { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
  { index = "pytorch-cpu", marker = "sys_platform == 'linux' and platform_machine == 'aarch64'" },
]
